--- a/package.json
+++ b/package.json
@@ -10,8 +10,39 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@yr/monotone-cubic-spline": "^1.0.3",
+    "add": "^2.0.6",
+    "convert-string": "^0.1.0",
+    "lodash": "^4.17.21",
+    "lodash.clamp": "^4.0.3",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.maxby": "^4.6.0",
+    "lodash.minby": "^4.6.0",
+    "moment": "^2.29.4",
+    "path-js": "^1.0.1",
+    "paths-js": "^0.4.11",
     "react": "18.1.0",
-    "react-native": "0.70.2"
+    "react-native": "0.70.2",
+    "react-native-ble-manager": "^8.4.3",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-element-dropdown": "^2.3.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.7.0",
+    "react-native-permissions": "^3.6.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
+    "react-native-share": "^7.9.0",
+    "react-native-svg": "^13.3.0",
+    "react-native-uuid": "^2.0.1",
+    "react-redux": "^8.0.4",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
