--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,11 @@ platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'PAMApp' do
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
+  pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
+  pod 'Permission-BluetoothPeripheral', :path => "#{permissions_path}/BluetoothPeripheral"
+
   config = use_native_modules!
 
   # Flags change depending on the env values.
